kubernetes/apps/vuabaohiem/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuabaohiem-web
  namespace: vuabaohiem
  labels:
    app.kubernetes.io/name: vuabaohiem-web
spec:
  type: ClusterIP
  selector:
    app: vuabaohiem-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
